<resources>
    <string name="app_name">Due-It</string>
    <string name="title">DUE-IT</string>
    <string name="welcome">Welcome</string>
    <string name="to">To</string>
    <string name="due_it">Due-It</string>
    <string name="hint">Enter Security Token</string>
    <string name="button1">Save Token</string>
    <string name="select_assignments">SELECT ASSIGNMENTS</string>
    <string name="button2">Overdue Assignments</string>
    <string name="button3">Past Assignments</string>
    <string name="button4">Future Assignments</string>
    <string name="button5">Upcoming Assignments</string>
</resources>